codex-rs/core/tests/suite/snapshots/all__suite__scenarios__incremental_tools__incremental_tools_catalog_messages.snap
---
source: core/tests/suite/scenarios_incremental_tools.rs
expression: "context_snapshot::format_request_history_snapshot(scenario, &requests,\n&ContextSnapshotOptions::default().rewrite_known_segments().include_request_settings(),)"
---
Scenario: Catalog overrides supply the update hint, both removal headers, and namespace instructions notices. MCP refreshes remove and restore tools, then change and clear only the namespace instructions. Runtime instructions remain verbatim, and unchanged turns do not repeat notices.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  model: "gpt-5.5"
  parallel_tool_calls: false
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"context":"all_turns","effort":"medium"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
-- request 1 (turn) --
00:additional_tools/developer (3; hash=7748a53142f449b7):
        - namespace/functions; hash=124fee69a69ed6b2
          - function/exec_command
          - function/write_stdin
          - function/list_mcp_resources
          - function/list_mcp_resource_templates
          - function/read_mcp_resource
          - function/request_user_input
          - custom/apply_patch
          - function/view_image
        - namespace/multi_agent_v1: Tools for spawning and managing sub-agents.; hash=2327142bda177c50
          - function/close_agent
          - function/resume_agent
          - function/send_input
          - function/spawn_agent
          - function/wait_agent
        - namespace/mcp__echo_service: Echo service instructions.; hash=a5144e5d70d01799
          - function/cwd
          - function/echo
01:message/developer:
    <MODEL_INSTRUCTIONS>
02:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    Begin with the echo service.
-- request 2 (turn) --
05:message/developer:
    Unavailable tools:
    - mcp__echo_service.cwd
06:message/user:
    Continue after disabling the cwd tool.
-- request 3 (turn) --
07:message/user:
    Continue with the remaining echo tool.
-- request 4 (turn) --
08:message/developer:
    Unavailable namespaces:
    - mcp__echo_service

    Unavailable tools:
    - functions.list_mcp_resource_templates
    - functions.list_mcp_resources
    - functions.read_mcp_resource
09:message/user:
    Continue after removing the echo service.
-- request 5 (turn) --
10:message/user:
    Continue without the echo service.
-- request 6 (turn) --
11:message/developer:
    Catalog update: retain earlier tools unless explicitly removed.
12:additional_tools/developer (2; hash=ba0bceb82aa883e0):
        - namespace/functions; hash=88d1efdc7cb932a8
          - function/list_mcp_resources
          - function/list_mcp_resource_templates
          - function/read_mcp_resource
        - namespace/mcp__echo_service: Echo service instructions.; hash=a5144e5d70d01799
          - function/cwd
          - function/echo
13:message/user:
    Continue with the restored echo service.
-- request 7 (turn) --
14:message/user:
    Continue with the same restored tools.
-- request 8 (turn) --
15:message/developer:
    Catalog update: retain earlier tools unless explicitly removed.
16:additional_tools/developer (1; hash=d436d651bf8b57b0):
        - namespace/functions: Use these echo tools.; hash=8b9887e764d8cfd4
          - function/cwd
          - function/echo
17:message/developer:
    Unavailable namespaces:
    - mcp__echo_service
18:message/user:
    Continue with the echo tools in the functions namespace.
-- request 9 (turn) --
19:message/developer:
    Catalog functions: Keep {name} and {instructions} literal.
20:message/user:
    Continue with updated echo instructions.
-- request 10 (turn) --
21:message/developer:
    Cleared functions.
22:message/user:
    Continue after clearing echo instructions.
-- request 11 (turn) --
23:message/user:
    Continue with the same cleared instructions.
